--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,22 +1,14 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="{{ site.lang | default: page.lang | default: 'en' }}">
 
-{% include head.html %}
+  {% include head.html %}
 
-<body>
-  <div class="row">
-    <div class="col s12 m3">
-      <div class="table cover">
-        {% include sidebar.html %}
-      </div>
-    </div>
-    <div class="col s12 m9">
-      <div class="post-listing">
-        {{ content }}
-        {% include footer.html %}
-      </div>
-    </div>
-  </div>
-  {% include js.html %}
-</body>
+  <body>
+
+    <main class="main" aria-label="Content">
+      {{ content }}
+    </main>
+
+  </body>
+
 </html>
