--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -65,3 +65,5 @@ layout: default
 <div id="disqus_thread"></div>
 {% include disqus.html %}
 {% endif %}
+Contact GitHub API Training Shop Blog About
+© 2017 GitHub, Inc. Terms Privacy Security Status Help
