updated build setup to live reload sass files with gulp watch and browser-sync

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -1,7 +1,6 @@
 ---
 ---
 @charset "utf-8";
-
-@import 'vendor/normalize';
-
-@import 'base/root';
+@import '../sass/vendor/normalize';
+@import '../sass/base/common';
+@import '../sass/components/header';
