--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,14 +1,37 @@
 <!DOCTYPE html>
 <html lang="{{ site.lang | default: page.lang | default: 'en' }}">
 
-  {% include head.html %}
+    <head>
+        <meta charset="utf-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <body>
+        <title>{% if page.title %} {{ page.title | escape }} {% else %} {{ site.title | escape }} {% endif %}
+        </title>
+        <meta name="description" content="{{ page.excerpt | default: site.description | strip_html | normalize_whitespace | truncate: 160 | escape }}">
 
-    <main class="main" aria-label="Content">
-      {{ content }}
-    </main>
+        <link rel="stylesheet" href="{{ "/assets/css/main.css" | relative_url }}">
+        <link rel="canonical" href="{{ page.url | replace:'index.html','' | absolute_url }}">
 
-  </body>
+        <!-- Icons -->
+        <!-- 16x16 -->
+        <link rel="shortcut icon" href="{{ site.url }}/assets/images/favicon.ico">
+
+        {% feed_meta %}
+    </head>
+
+    <body>
+
+        {% include header.html %}
+
+        <div class="container" aria-label="Content">
+            
+            {{ content }}
+
+        </div>
+
+        {% include footer.html %}
+        {% include js.html %}
+    </body>
 
 </html>
