updated styles for header - updated footer styles - added syntax highlighting

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,12 +1,13 @@
 <div id="site-header" class="site-header" >
 	<a class="site-header--link" href="{{ site.url }}">
-		<svg class="site-header--logo">
-           <use xlink:href="assets/images/hbc-digital-logo-white.svg#Layer_1"></use>
-       </svg>
+<!-- 		<svg class="site-header--logo">
+           <use class="date" xlink:href="assets/images/hbc-digital-logo-white.svg#logo-date"></use>
+           <use  class="text" xlink:href="assets/images/hbc-digital-logo-white.svg#logo-text"></use>
+       </svg> -->
 	</a>
 	<ul id="nav" class="navigation">
-		<a class="navigation--link"><li>Insights</li></a>
-		<a class="navigation--link"><li>About Us</li></a>
-		<a class="navigation--link"><li>Work Here</li></a>
+		<li class="navigation--link"><a>Insights</a></li>
+		<li class="navigation--link"><a>About Us</a></li>
+		<li class="navigation--link"><a>Work Here</a></li>
 	</ul>
 </div>
