--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -1,6 +1,14 @@
 ---
 ---
 @charset "utf-8";
+
+// Vendor styles
 @import '../sass/vendor/normalize';
+@import '../sass/vendor/syntax-highlighting';
+
+// Components
 @import '../sass/base/common';
+@import '../sass/base/layout';
 @import '../sass/components/header';
+@import '../sass/components/footer';
+@import '../sass/components/navigation';
