--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,3 +1,3 @@
 <div class="footer">
-  &copy; {{ site.time | date: '%Y' }} {{ site.owner.name }}.</i>
+  &copy; {{ site.time | date: '%Y' }} {{ site.title }}, {{ site.tagline }}</i>
 </div>
