--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -12,3 +12,5 @@
 @import '../sass/components/header';
 @import '../sass/components/footer';
 @import '../sass/components/navigation';
+@import '../sass/components/post-listing';
+@import '../sass/components/post';
