updates to post-listing on homepage

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -9,8 +9,10 @@
 // Components
 @import '../sass/base/common';
 @import '../sass/base/layout';
+@import '../sass/base/typography';
 @import '../sass/components/header';
 @import '../sass/components/footer';
 @import '../sass/components/navigation';
+@import '../sass/components/sidebar';
 @import '../sass/components/post-listing';
 @import '../sass/components/post';
