--- a/_includes/header.html
+++ b/_includes/header.html
@@ -5,9 +5,9 @@
            <use  class="text" xlink:href="assets/images/hbc-digital-logo-white.svg#logo-text"></use>
        </svg> -->
 	</a>
-	<ul id="nav" class="navigation">
-		<li class="navigation--link"><a>Insights</a></li>
-		<li class="navigation--link"><a>About Us</a></li>
-		<li class="navigation--link"><a>Work Here</a></li>
+	<ul class="navigation">
+		{% for link in site.data.navigation.header-links %}
+		  <li class="navigation__link-item"><a href="{{ site.url }}{{ link.url }}" class="navigation__link">{{ link.title }}</a></li>
+		{% endfor %}
 	</ul>
 </div>
