--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -12,6 +12,7 @@
 
         <link rel="stylesheet" href="{{ "/assets/css/main.css" | relative_url }}">
         <link rel="canonical" href="{{ page.url | replace:'index.html','' | absolute_url }}">
+        <link href="https://fonts.googleapis.com/css?family=Rubik:300,500,700" rel="stylesheet">
 
         <!-- Icons -->
         <!-- 16x16 -->
