--- a/_layouts/homepage.html
+++ b/_layouts/homepage.html
@@ -2,59 +2,8 @@
 layout: default
 ---
 
-{% for post in paginator.posts%}
-<div class="post-listing">
-        <h4 class="post-listing--header">
-            <a href="{{ site.url }}{{ post.url }}" class="post-listing--title" title="{{ post.title }}">{{ post.title }}</a>
-            {% if post.link %}
-            <a class="post-title-link" href="{{ post.link }}" target="_blank" title="{{ post.title }}"><i class="fa fa-external-link"></i></a>
-            {% endif %}
-        </h4>
-        <p class="post-meta">
-            <span class="post-date">
-                {{ post.date | date: "%-d %b %Y" | upcase }}
-            </span>
-            {% if post.categories.size > 0 %}
-            |
-            {% for cat in post.categories %}
-                <a class="post-cat" href="{{ site.url }}/categories/#{{ cat }}">{{ cat }}</a>
-                {% unless forloop.last %}
-                <span>/</span>
-                {% endunless %}
-            {% endfor %}
-            {% endif %}
-        </p>
+{% include featured-posts.html %}
 
-        {% if post.author %}
-            {% assign author = site.data.authors[post.author] %}
-        {% else %}
-            {% assign author = site.owner %}
-        {% endif %}
-
-    {% if post.excerpt %}
-    <div class="post-description">
-        {{ post.excerpt }}
-    </div>
-    {% endif %}
-
-    {% if post.image.feature %}
-    <div class="post-image-feature">
-        <img src=
-        {% if post.image.feature contains 'http' %}
-        "{{ post.image.feature }}"
-        {% else %}
-        "{{ site.url }}/assets/{{ post.image.feature }}"
-        {% endif %}
-        alt="{{ post.title }} feature image">
-
-        {% if post.image.credit %}
-        <span class="image-credit">Photo Credit: <a href="{{ post.image.creditlink }}">{{ post.image.credit }}</a></span>
-        {% endif %}
-    </div><!-- /.image-wrap -->
-    {% endif %}
-
-</div>
-{% endfor %}
 
 <!-- Pagination links -->
 <div class="pagination">
