--- a/_layouts/post_listing.html
+++ b/_layouts/post_listing.html
@@ -1,60 +1,83 @@
 ---
 layout: default
 ---
-
-{% for post in paginator.posts%}
-<div class="post-listing">
-        <h4 class="post-listing--header">
-            <a href="{{ site.url }}{{ post.url }}" class="post-listing--title" title="{{ post.title }}">{{ post.title }}</a>
+<div class="posts-listing">
+{% for post in site.posts | limit: 1 %}
+    <div class="post">
+        <h1 class="post--header">
+            <a href="{{ site.url }}{{ post.url }}" class="post--title" title="{{ post.title }}">{{ post.title }}</a>
             {% if post.link %}
             <a class="post-title-link" href="{{ post.link }}" target="_blank" title="{{ post.title }}"><i class="fa fa-external-link"></i></a>
             {% endif %}
-        </h4>
-        <p class="post-meta">
-            <span class="post-date">
-                {{ post.date | date: "%-d %b %Y" | upcase }}
-            </span>
+        </h1>
+        <p class="post--meta">
+            <div class="post--date">
+                <div>{{ post.date | date: "%-d" }}</div>
+                <div>{{ post.date | date: "%b" | upcase }}</div>
+                <div>{{ post.date | date: "%Y" }}</div>
+            </div>
             {% if post.categories.size > 0 %}
-            |
-            {% for cat in post.categories %}
-                <a class="post-cat" href="{{ site.url }}/categories/#{{ cat }}">{{ cat }}</a>
-                {% unless forloop.last %}
-                <span>/</span>
-                {% endunless %}
-            {% endfor %}
+                <div class="post--category-container">
+                {% for cat in post.categories %}
+                    <a class="post--category" href="{{ site.url }}/categories/#{{ cat }}">{{ cat }}</a>
+                    {% unless forloop.last %}
+                    <span>,</span>
+                    {% endunless %}
+                {% endfor %}
+                </div>
             {% endif %}
+
+            {% if post.tags.size > 0 %}
+                <div class="post--tag-container"
+                {% for tag in post.tags %}
+                    <a class="post--tag" href="{{ site.url }}/tags/#{{ tag }}">{{ tag }}</a>
+                    {% unless forloop.last %}
+                    <span>,</span>
+                    {% endunless %}
+                {% endfor %}
+                </div>
+            {% endif %}
+
+            {% if post.author %}
+                <a class="post--author">author: {{ post.author }}</a>
+            {% else %}
+                <a class="post--author">author: {{ site.title }}</a>
+            {% endif %}
+
         </p>
 
-        {% if post.author %}
-            {% assign author = site.data.authors[post.author] %}
+        {% if post.image.feature %}
+        <div class="post--image-feature">
+            <img src=
+            {% if post.image.feature contains 'http' %}
+            "{{ post.image.feature }}"
+            {% else %}
+            "{{ base.url }}/assets/images/{{ post.image.feature }}"
+            {% endif %}
+            alt="{{ post.title }} feature image">
+
+            {% if post.image.credit %}
+            <span class="post--image-credit">Photo Credit: <a href="{{ post.image.creditlink }}">{{ post.image.credit }}</a></span>
+            {% endif %}
+        </div>
         {% else %}
-            {% assign author = site.owner %}
+        <div class="post--image-feature">
+            <img src="http://placehold.it/1920x800/" alt="{{ post.title }} feature image" >
+        </div>
         {% endif %}
 
-    {% if post.excerpt %}
-    <div class="post-description">
-        {{ post.excerpt }}
+        <p class="post--excerpt">
+        {% if post.excerpt %}
+            {{ post.excerpt | strip_html | truncatewords: 70 }}
+        {% endif %}
+        </p>
+
+        <div class="read-more">
+            <a href="{{ site.url }}{{ post.url }}" title="{{ post.title }}">Read More</a>
+        </div>
     </div>
-    {% endif %}
-
-    {% if post.image.feature %}
-    <div class="post-image-feature">
-        <img src=
-        {% if post.image.feature contains 'http' %}
-        "{{ post.image.feature }}"
-        {% else %}
-        "{{ site.url }}/assets/{{ post.image.feature }}"
-        {% endif %}
-        alt="{{ post.title }} feature image">
-
-        {% if post.image.credit %}
-        <span class="image-credit">Photo Credit: <a href="{{ post.image.creditlink }}">{{ post.image.credit }}</a></span>
-        {% endif %}
-    </div><!-- /.image-wrap -->
-    {% endif %}
-
-</div>
 {% endfor %}
+</div>
 
 <!-- Pagination links -->
 <div class="pagination">
@@ -70,3 +93,5 @@ layout: default
         <!-- <span class="next ">Next</span> -->
     {% endif %}
 </div>
+
+{% include sidebar.html %}
