--- a/_includes/featured-posts.html
+++ b/_includes/featured-posts.html
@@ -131,3 +131,7 @@
     </div>
 {% endfor %}
 </div>
+
+<div class="more-posts-divider">
+	<a href="/archives/" title="more posts">More Posts</a>
+</div>
