--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,5 +1,5 @@
 <div id="site-header" class="site-header" >
-	<a class="site-header--link" href="{{ site.url }}">
+	<a class="site-header--link" href="/">
 <!-- 		<svg class="site-header--logo">
            <use class="date" xlink:href="assets/images/hbc-digital-logo-white.svg#logo-date"></use>
            <use  class="text" xlink:href="assets/images/hbc-digital-logo-white.svg#logo-text"></use>
