--- a/_layouts/post_listing.html
+++ b/_layouts/post_listing.html
@@ -2,7 +2,7 @@
 layout: default
 ---
 <div class="posts-listing">
-{% for post in site.posts | limit: 1 %}
+{% for post in paginator.posts %}
     <div class="post">
         <h1 class="post--header">
             <a href="{{ site.url }}{{ post.url }}" class="post--title" title="{{ post.title }}">{{ post.title }}</a>
@@ -80,18 +80,30 @@ layout: default
 </div>
 
 <!-- Pagination links -->
+{% if paginator.total_pages > 1 %}
 <div class="pagination">
-    {% if paginator.previous_page %}
-        <a href="{{ paginator.previous_page_path }}" class="previous">Previous</a>
+  {% if paginator.previous_page %}
+    <a rel="prev" href="{{ paginator.previous_page_path | prepend: site.baseurl | replace: '//', '/' }}">&laquo; Prev</a>
+  {% else %}
+    <span>&laquo; Prev</span>
+  {% endif %}
+
+  {% for page in (1..paginator.total_pages) %}
+    {% if page == paginator.page %}
+      <em>{{ page }}</em>
+    {% elsif page == 1 %}
+      <a href="{{ '/archives' | prepend: site.baseurl | replace: '//', '/' }}">{{ page }}</a>
     {% else %}
-        <span class="previous">Previous</span>
+      <a href="{{ site.paginate_path | prepend: site.baseurl | replace: '//', '/' | replace: ':num', page }}">{{ page }}</a>
     {% endif %}
-    <span class="page_number ">Page: {{ paginator.page }} of {{ paginator.total_pages }}</span>
-    {% if paginator.next_page %}
-        <a href="{{ paginator.next_page_path }}" class="next">Next</a>
-    {% else %}
-        <!-- <span class="next ">Next</span> -->
-    {% endif %}
+  {% endfor %}
+
+  {% if paginator.next_page %}
+    <a rel="next" href="{{ paginator.next_page_path | prepend: site.baseurl | replace: '//', '/' }}">Next &raquo;</a>
+  {% else %}
+    <span>Next &raquo;</span>
+  {% endif %}
 </div>
+{% endif %}
 
 {% include sidebar.html %}
