--- a/assets/sass/base/_common.scss
+++ b/assets/sass/base/_common.scss
@@ -2,7 +2,8 @@
 $hbc-black: #000000;
 $hbc-white: #ffffff;
 $hbc-highlight: #E94F3D;
-$hbc-gray: #ccc;
+$hbc-border: #ccc;
+$hbc-gray: #777;
 
 
 /**
