--- a/assets/sass/base/_typography.scss
+++ b/assets/sass/base/_typography.scss
@@ -1,7 +1,8 @@
-$hbc-font-family: 'Rubik', sans-serif;
+$hbc-font-family: 'Poppins', sans-serif;
 
 * {
 	font-family: $hbc-font-family;
+	font-weight: 300;
 	text-rendering: optimizeLegibility;
 	-moz-osx-font-smoothing: grayscale;
 	-webkit-font-smoothing: antialiased;
