--- a/assets/sass/components/_navigation.scss
+++ b/assets/sass/components/_navigation.scss
@@ -1,16 +1,9 @@
 .navigation {
-    float: right;
-    list-style-type: none;
-    padding: 0;
     margin: 0;
-    margin-right: 40px;
-    transform: translateY(150%);
-
-    &--footer {
-    	float: none;
-    	transform: translateY(0%);
-    	margin: 20px;
-    }
+    position: absolute;
+    right: 0px;
+    transform: translateY(-50%);
+    top: calc(50%);
 
     &__link-item {
 		display: inline-block;
@@ -18,13 +11,33 @@
     }
 
 	&__link {
-		color: $hbc-white;
+		color: $hbc-black;
 		text-decoration: none;
 		transition: color 150ms ease-out;
+        padding-bottom: 1px;
+        border-bottom: solid 0px $hbc-white;
 
 		&:hover {
 			color: $hbc-highlight;
 			cursor: pointer;
+            border-bottom: solid 2px $hbc-highlight;
 		}
 	}
+
+    &--footer {
+        position: relative;
+        float: none;
+        transform: translateY(0%);
+        margin: 20px;
+
+        .navigation__link {
+            color: white;
+
+            &:hover {
+                color: $hbc-highlight;
+                cursor: pointer;
+                border-bottom: solid 2px $hbc-highlight;
+            }
+        }
+    }
 }
