--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,10 +1,7 @@
 <header id="site-header" class="site-header" >
 	<div class="inner-wrapper">
-		<a class="site-header--link" href="/">
-	<!-- 		<svg class="site-header--logo">
-	           <use class="date" xlink:href="assets/images/hbc-digital-logo-white.svg#logo-date"></use>
-	           <use  class="text" xlink:href="assets/images/hbc-digital-logo-white.svg#logo-text"></use>
-	       </svg> -->
+		<a class="site-header__logo" href="/">
+			<img src="{{ site.url }}/assets/images/hbc-tech-beta.svg"/>
 		</a>
 		<ul class="navigation">
 			{% for link in site.data.navigation.header-links %}
