--- a/_layouts/article_listing.html
+++ b/_layouts/article_listing.html
@@ -1,109 +1,88 @@
 ---
 layout: default
+pagination:
+  enabled: true
 ---
-<div class="posts-listing">
+<section class="inner-wrapper article-listing">
 {% for post in paginator.posts %}
-    <div class="post">
-        <h1 class="post--header">
-            <a href="{{ site.url }}{{ post.url }}" class="post--title" title="{{ post.title }}">{{ post.title }}</a>
+        {% if post.image.feature %}
+            <img class="article__feature-image" src=
+            {% if post.image.feature contains 'http' %}
+            "{{ post.image.feature }}"
+            {% else %}
+            "{{ site.url }}/assets/images/{{ post.image.feature }}"
+            {% endif %}
+            alt="{{ post.title }} feature image">
+        {% else %}
+            <img src="http://placehold.it/1920x800/" alt="{{ post.title }} feature image" >
+        {% else %}
+            <img class="article__feature-image" src="http://placehold.it/1920x800/" alt="{{ post.title }} feature image" >
+        {% endif %}
+        <h1 class="article-title">
+            <a href="{{ site.url }}{{ post.url }}" class="article__link" title="{{ post.title }}">{{ post.title }}</a>
             {% if post.link %}
-            <a class="post-title-link" href="{{ post.link }}" target="_blank" title="{{ post.title }}"><i class="fa fa-external-link"></i></a>
+            <a class="article__link" href="{{ post.link }}" target="_blank" title="{{ post.title }}"><i class="fa fa-external-link"></i></a>
             {% endif %}
         </h1>
-        <p class="post--meta">
-            <div class="post--date">
-                <div>{{ post.date | date: "%-d" }}</div>
-                <div>{{ post.date | date: "%b" | upcase }}</div>
-                <div>{{ post.date | date: "%Y" }}</div>
-            </div>
+        <div class="article-meta">
+            <span class="date-day">{{ post.date | date: "%-d" }}</span>
+            <span class="date-month">{{ post.date | date: "%b" | upcase }}</span>
+            <span class="date-year">{{ post.date | date: "%Y" }}</span>
+
             {% if post.categories.size > 0 %}
-                <div class="post--category-container">
-                {% for cat in post.categories %}
-                    <a class="post--category" href="{{ site.url }}/categories/#{{ cat }}">{{ cat }}</a>
-                    {% unless forloop.last %}
-                    <span>,</span>
-                    {% endunless %}
-                {% endfor %}
+            <div class="categories">
+            {% for cat in post.categories %}
+                <a class="article-category" href="{{ site.url }}/categories/#{{ cat }}">{{cat}}</a>{% unless forloop.last %}<span>,</span>{% endunless %}{% endfor %}
                 </div>
             {% endif %}
 
             {% if post.tags.size > 0 %}
-                <div class="post--tag-container"
-                {% for tag in post.tags %}
-                    <a class="post--tag" href="{{ site.url }}/tags/#{{ tag }}">{{ tag }}</a>
-                    {% unless forloop.last %}
-                    <span>,</span>
-                    {% endunless %}
-                {% endfor %}
-                </div>
+            <div class="tags">
+            {% for tag in post.tags %}
+                <a class="article-tag" href="{{ site.url }}/tags/#{{ tag }}">{{ tag }}</a>
+                {%- unless forloop.last -%}
+                <span>,</span>
+                {% endunless %}
+            {% endfor %}
+            </div>
             {% endif %}
 
             {% if post.author %}
-                <a class="post--author">author: {{ post.author }}</a>
+                <a class="article-author" href="#">{{ post.author }}</a>
             {% else %}
-                <a class="post--author">author: {{ site.title }}</a>
-            {% endif %}
-
-        </p>
-
-        {% if post.image.feature %}
-        <div class="post--image-feature">
-            <img src=
-            {% if post.image.feature contains 'http' %}
-            "{{ post.image.feature }}"
-            {% else %}
-            "{{ base.url }}/assets/images/{{ post.image.feature }}"
-            {% endif %}
-            alt="{{ post.title }} feature image">
-
-            {% if post.image.credit %}
-            <span class="post--image-credit">Photo Credit: <a href="{{ post.image.creditlink }}">{{ post.image.credit }}</a></span>
+                <a class="article-author" href="#">{{ site.title }}</a>
             {% endif %}
         </div>
-        {% else %}
-        <div class="post--image-feature">
-            <img src="http://placehold.it/1920x800/" alt="{{ post.title }} feature image" >
-        </div>
-        {% endif %}
 
-        <p class="post--excerpt">
-        {% if post.excerpt %}
-            {{ post.excerpt | strip_html | truncatewords: 70 }}
-        {% endif %}
-        </p>
-
-        <div class="read-more">
-            <a href="{{ site.url }}{{ post.url }}" title="{{ post.title }}">Read More</a>
-        </div>
-    </div>
-{% endfor %}
-</div>
-
-<!-- Pagination links -->
-{% if paginator.total_pages > 1 %}
-<div class="pagination">
-  {% if paginator.previous_page %}
-    <a rel="prev" href="{{ paginator.previous_page_path | prepend: site.baseurl | replace: '//', '/' }}">&laquo; Prev</a>
-  {% else %}
-    <span>&laquo; Prev</span>
-  {% endif %}
-
-  {% for page in (1..paginator.total_pages) %}
-    {% if page == paginator.page %}
-      <em>{{ page }}</em>
-    {% elsif page == 1 %}
-      <a href="{{ '/archives' | prepend: site.baseurl | replace: '//', '/' }}">{{ page }}</a>
-    {% else %}
-      <a href="{{ site.paginate_path | prepend: site.baseurl | replace: '//', '/' | replace: ':num', page }}">{{ page }}</a>
+    <p class="article-excerpt">
+    {% if post.excerpt %}
+        {{ post.excerpt | strip_html | truncatewords: 70 }}
     {% endif %}
-  {% endfor %}
+    </p>
 
-  {% if paginator.next_page %}
-    <a rel="next" href="{{ paginator.next_page_path | prepend: site.baseurl | replace: '//', '/' }}">Next &raquo;</a>
-  {% else %}
-    <span>Next &raquo;</span>
-  {% endif %}
-</div>
-{% endif %}
+    <a class="read-more" href="{{ site.url }}{{ post.url }}" title="{{ post.title }}">Read More</a>
+{% endfor %}
 
-{% include sidebar.html %}
+    <!-- Pagination links -->
+    {% if paginator.total_pages > 1 %}
+    <div class="pagination">
+    {% if paginator.previous_page %}
+        <a rel="prev" href="{{ paginator.previous_page_path | prepend: site.baseurl | replace: '//', '/' }}">&laquo; Prev</a>
+    {% endif %}
+
+    {% for page in (1..paginator.total_pages) %}
+        {% if page == paginator.page %}
+        <em>{{ page }}</em>
+        {% elsif page == 1 %}
+        <a href="{{ '/insights' | prepend: site.baseurl | replace: '//', '/' }}">{{ page }}</a>
+        {% else %}
+        <a href="{{ '/insights/' | prepend: site.baseurl | replace: '//', '/' | append: page }}">{{ page }}</a>
+        {% endif %}
+      {% endfor %}
+
+      {% if paginator.next_page %}
+        <a rel="next" href="{{ paginator.next_page_path | prepend: site.baseurl | replace: '//', '/' }}">Next &raquo;</a>
+      {% endif %}
+    </div>
+    {% endif %}
+</section>
