--- a/assets/sass/components/_article.scss
+++ b/assets/sass/components/_article.scss
@@ -9,6 +9,7 @@
 		height: 413px;
 		margin-top: -200px;
 		z-index: -1;
+		clip-path: polygon(0% 20%, 100% 0%, 100% 100%, 0% 100%);
 	}
 
 	.article-category {
@@ -48,9 +49,21 @@
 		padding: 60px;
 		margin-top: 200px;
 		background-color: $hbc-white;
+		clip-path: polygon(0% 0%, 100% 2%, 100% 100%, 0% 100%);
 
 		p {
 			max-width: 820px;
+		}
+	}
+
+	&__footer {
+		padding: 0 60px;
+
+		// adding this to prevent footer from wrapping around any potential floated elements at the end of the article
+		&:before {
+			content: "";
+			display: table;
+			clear: both;
 		}
 	}
 }
