--- a/assets/sass/components/_header.scss
+++ b/assets/sass/components/_header.scss
@@ -1,25 +1,12 @@
 .site-header {
 	display: block;
-	position: relative;
-	background-color: $hbc-black;
-	color: $hbc-white;
-	overflow: visible;
+	background-color: $hbc-white;
+	color: $hbc-black;
 
-	.inner-wrapper {
-		max-width: 1280px;
-		margin: auto;
-	}
-
-	&--link {
+	&__logo {
 	    display: inline-flex;
-	    background: url(/assets/images/hbc-digital-logo-white.svg) 0 0/ contain no-repeat;
-	    width: 180px;
-	    height: 120px;
-	    margin: 20px;
-	}
-
-	&--logo {
-		display: inline-block;
-		overflow: visible !important;
+	    width: 280px;
+	    height: 100px;
+	    margin: 20px 20px 20px 0;
 	}
 }
