--- a/_layouts/article_listing.html
+++ b/_layouts/article_listing.html
@@ -5,6 +5,8 @@ pagination:
 ---
 <section class="inner-wrapper article-listing">
 {% for post in paginator.posts %}
+    <div class="article">
+        <a href="{{ site.url }}{{ post.url }}">
         {% if post.image.feature %}
             <img class="article__feature-image" src=
             {% if post.image.feature contains 'http' %}
@@ -12,55 +14,47 @@ pagination:
             {% else %}
             "{{ site.url }}/assets/images/{{ post.image.feature }}"
             {% endif %}
-            alt="{{ post.title }} feature image">
+            alt="{{ post.title }}">
         {% else %}
-            <img src="http://placehold.it/1920x800/" alt="{{ post.title }} feature image" >
+            <img src="http://placehold.it/1920x800/" alt="{{ post.title }}" >
         {% else %}
             <img class="article__feature-image" src="http://placehold.it/1920x800/" alt="{{ post.title }} feature image" >
         {% endif %}
-        <h1 class="article-title">
+        </a>
+        <h1 class="article__title">
             <a href="{{ site.url }}{{ post.url }}" class="article__link" title="{{ post.title }}">{{ post.title }}</a>
-            {% if post.link %}
-            <a class="article__link" href="{{ post.link }}" target="_blank" title="{{ post.title }}"><i class="fa fa-external-link"></i></a>
-            {% endif %}
         </h1>
-        <div class="article-meta">
+        <div class="article__meta">
             <span class="date-day">{{ post.date | date: "%-d" }}</span>
             <span class="date-month">{{ post.date | date: "%b" | upcase }}</span>
             <span class="date-year">{{ post.date | date: "%Y" }}</span>
 
             {% if post.categories.size > 0 %}
-            <div class="categories">
             {% for cat in post.categories %}
-                <a class="article-category" href="{{ site.url }}/categories/#{{ cat }}">{{cat}}</a>{% unless forloop.last %}<span>,</span>{% endunless %}{% endfor %}
-                </div>
-            {% endif %}
-
-            {% if post.tags.size > 0 %}
-            <div class="tags">
-            {% for tag in post.tags %}
-                <a class="article-tag" href="{{ site.url }}/tags/#{{ tag }}">{{ tag }}</a>
-                {%- unless forloop.last -%}
-                <span>,</span>
-                {% endunless %}
-            {% endfor %}
-            </div>
+                <a class="article__category" href="{{ site.url }}/categories/#{{ cat }}">{{cat}}</a>{% unless forloop.last %}<span>, </span>{% endunless %}{% endfor %}
             {% endif %}
 
             {% if post.author %}
-                <a class="article-author" href="#">{{ post.author }}</a>
+                {% for author in post.author %}
+                    <a class="article__author-link" href="{{ site.url }}/authors/{{- author -}}">
+                    {{- author -}}
+                    </a>
+                    {%- unless forloop.last -%}
+                    <span>,</span>
+                    {% endunless %}
+                {% endfor %}
             {% else %}
-                <a class="article-author" href="#">{{ site.title }}</a>
+                {{ site.title }}
             {% endif %}
         </div>
+        <p class="article-excerpt">
+        {% if post.excerpt %}
+            {{ post.excerpt | strip_html | truncatewords: 70 }}
+        {% endif %}
+        </p>
 
-    <p class="article-excerpt">
-    {% if post.excerpt %}
-        {{ post.excerpt | strip_html | truncatewords: 70 }}
-    {% endif %}
-    </p>
-
-    <a class="read-more" href="{{ site.url }}{{ post.url }}" title="{{ post.title }}">Read More</a>
+        <a class="read-more" href="{{ site.url }}{{ post.url }}" title="{{ post.title }}">Read More</a>
+    </div>
 {% endfor %}
 
     <!-- Pagination links -->
