--- a/_layouts/article_listing.html
+++ b/_layouts/article_listing.html
@@ -4,58 +4,16 @@ pagination:
   enabled: true
 ---
 <section class="inner-wrapper article-listing">
-{% for post in paginator.posts %}
-    <div class="article">
-        <a href="{{ site.url }}{{ post.url }}">
-        {% if post.image.feature %}
-            <img class="article__feature-image" src=
-            {% if post.image.feature contains 'http' %}
-            "{{ post.image.feature }}"
-            {% else %}
-            "{{ site.url }}/assets/images/{{ post.image.feature }}"
-            {% endif %}
-            alt="{{ post.title }}">
-        {% else %}
-            <img src="http://placehold.it/1920x800/" alt="{{ post.title }}" >
-        {% else %}
-            <img class="article__feature-image" src="http://placehold.it/1920x800/" alt="{{ post.title }} feature image" >
-        {% endif %}
-        </a>
-        <h1 class="article__title">
-            <a href="{{ site.url }}{{ post.url }}" class="article__link" title="{{ post.title }}">{{ post.title }}</a>
-        </h1>
-        <div class="article__meta">
-            <span class="date-day">{{ post.date | date: "%-d" }}</span>
-            <span class="date-month">{{ post.date | date: "%b" | upcase }}</span>
-            <span class="date-year">{{ post.date | date: "%Y" }}</span>
-
-            {% if post.categories.size > 0 %}
-            {% for cat in post.categories %}
-                <a class="article__category" href="{{ site.url }}/categories/#{{ cat }}">{{cat}}</a>{% unless forloop.last %}<span>, </span>{% endunless %}{% endfor %}
-            {% endif %}
-
-            {% if post.author %}
-                {% for author in post.author %}
-                    <a class="article__author-link" href="{{ site.url }}/authors/{{- author -}}">
-                    {{- author -}}
-                    </a>
-                    {%- unless forloop.last -%}
-                    <span>,</span>
-                    {% endunless %}
-                {% endfor %}
-            {% else %}
-                {{ site.title }}
-            {% endif %}
-        </div>
-        <p class="article-excerpt">
+    {% for post in paginator.posts %}
+    <article class="article">
+        {% include article-snippet.html %}
         {% if post.excerpt %}
+        <p class="article-excerpt">
             {{ post.excerpt | strip_html | truncatewords: 70 }}
-        {% endif %}
         </p>
-
-        <a class="read-more" href="{{ site.url }}{{ post.url }}" title="{{ post.title }}">Read More</a>
-    </div>
-{% endfor %}
+        {% endif %}
+    </article>
+    {% endfor %}
 
     <!-- Pagination links -->
     {% if paginator.total_pages > 1 %}
