--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -16,3 +16,4 @@
 @import '../sass/components/sidebar';
 @import '../sass/components/article-listing';
 @import '../sass/components/article';
+@import '../sass/components/author-bio';
