--- a/assets/sass/components/_article.scss
+++ b/assets/sass/components/_article.scss
@@ -1,6 +1,7 @@
 .article {
 	max-width: 1080px;
 	margin: auto;
+	padding-bottom: 100px;
 
 	.feature-image {
 		position: absolute;
@@ -9,7 +10,7 @@
 		height: 413px;
 		margin-top: -200px;
 		z-index: -1;
-		clip-path: polygon(0% 20%, 100% 0%, 100% 100%, 0% 100%);
+		clip-path: polygon(0% 75px, 100% 0%, 100% 100%, 0% 100%);
 	}
 
 	.article-category {
@@ -49,7 +50,7 @@
 		padding: 60px;
 		margin-top: 200px;
 		background-color: $hbc-white;
-		clip-path: polygon(0% 0%, 100% 2%, 100% 100%, 0% 100%);
+		clip-path: polygon(0% 0%, 100% 75px, 100% 100%, 0% 100%);
 
 		p {
 			max-width: 820px;
@@ -64,6 +65,19 @@
 			content: "";
 			display: table;
 			clear: both;
+		}
+	}
+
+	&__tags {
+		margin: 40px 0;
+
+		&__link {
+			color: $hbc-gray;
+			font-style: italic; 
+			
+			&:hover {
+				color: $hbc-highlight;
+			}
 		}
 	}
 }
