--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -17,3 +17,4 @@
 @import '../sass/components/article-listing';
 @import '../sass/components/article';
 @import '../sass/components/author-bio';
+@import '../sass/components/categories';
