--- a/_includes/featured-articles.html
+++ b/_includes/featured-articles.html
@@ -1,5 +1,5 @@
 <section class="inner-wrapper article-listing">
-	<!-- display the 1st post in a big way-->
+	<!-- display the 1st article in a big way-->
 	{% for post in site.posts | limit: 1 %}
     <div class="article article--featured">
         {% include article-snippet.html %}
