--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,6 +1,6 @@
 <header id="site-header" class="site-header" >
 	<div class="inner-wrapper">
-		<a class="site-header__logo" href="/">
+		<a class="site-header__logo" href="{{ site.url }}/">
 			<img src="{{ site.url }}/assets/images/hbc-tech-beta.svg"/>
 		</a>
 		<ul class="navigation">
