--- a/_layouts/article.html
+++ b/_layouts/article.html
@@ -10,9 +10,7 @@ layout: default
             {{ site.url }}/assets/images/{{ page.image.feature }}
         {% endif %}) 50% 50% / cover no-repeat;"></div>
     {% else %}
-        <div class="feature-image">
-            <img src="http://placehold.it/1920x800/" alt="{{ post.title }}" >
-        </div>        
+    <div class="feature-image" style="background: url(https://placehold.it/1920x800/) 50% 50% / cover no-repeat;"></div>
     {% endif %}
     <section class="article__content">
 <!--     {% if page.image.credit %}
