adding responsive css grid --WIP

--- a/_layouts/article.html
+++ b/_layouts/article.html
@@ -32,7 +32,7 @@ layout: default
 </article>
 
 
-<div class="share-buttons">
+<!-- <div class="share-buttons">
     <h6>Share on: </h6>
     <ul>
         <li>
@@ -51,7 +51,8 @@ layout: default
             <a href="https://www.reddit.com/submit?url={{ site.url }}{{ page.url }}" class="reddit btn" title="Share on Reddit"><i class="fa fa-reddit"></i><span> Reddit</span></a>
         </li>
     </ul>
-</div><!-- end share-buttons -->
+</div>
+ --><!-- end share-buttons -->
 
 {% if site.owner.disqus-shortname and page.comments == true %}
 <div id="disqus_thread"></div>
