--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -20,7 +20,7 @@
 
     <body class="container" aria-label="Content">
         {% include header.html %}
-        {{ content }}
+        <section class="content">{{ content }}</section>
         {% include footer.html %}
         {% include js.html %}
     </body>
