--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,8 +1,8 @@
-<div class="footer">
+<footer class="footer">
 	<ul class="navigation navigation--footer">
 		{% for link in site.data.navigation.footer-links %}
-		  <li class="navigation__link-item"><a href="{{ site.url }}{{ link.url }}" class="navigation__link">{{ link.title }}</a></li>
+		  <li class="navigation__link-item"><a href="{{ site.url }}{{ link.url }}" class="navigation__link"><span class="navigation__link-highlight">{{ link.title }}</span></a></li>
 		{% endfor %}
 	</ul>
-  &copy; {{ site.time | date: '%Y' }} {{ site.title }}, {{ site.tagline }}</i>
-</div>
+  <p class="copyright">&copy; {{ site.time | date: '%Y' }} {{ site.title }}, {{ site.tagline }}</i></p>
+</footer>
