--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,12 +1,10 @@
 <header id="site-header" class="site-header" >
-	<div class="inner-wrapper">
-		<a class="site-header__logo" href="{{ site.url }}/">
-			<img src="{{ site.url }}/assets/images/hbc-tech-beta.svg"/>
-		</a>
-		<ul class="navigation">
-			{% for link in site.data.navigation.header-links %}
-			  <li class="navigation__link-item"><a href="{{ site.url }}{{ link.url }}" class="navigation__link">{{ link.title }}</a></li>
-			{% endfor %}
-		</ul>
-	</div>
+	<a class="site-header__logo" href="{{ site.url }}/">
+		<img src="{{ site.url }}/assets/images/hbc-tech-beta.svg"/>
+	</a>
+	<ul class="navigation">
+		{% for link in site.data.navigation.header-links %}
+		  <li class="navigation__link-item"><a href="{{ site.url }}{{ link.url }}" class="navigation__link"><span class="navigation__link-highlight">{{ link.title }}</span></a></li>
+		{% endfor %}
+	</ul>
 </header>
