--- a/assets/sass/base/_layout.scss
+++ b/assets/sass/base/_layout.scss
@@ -1,18 +1,35 @@
 // Basic Layout
-$padding: 10px;
+$site-width: 1280px;
+$content-width: 1080px;
 
 .container {
-	margin: auto;
+	display: grid;
+	grid-template-columns: repeat(12, 1fr);
+    grid-auto-rows: minmax(100px, auto);
+    grid-template-areas: 
+      ". hd hd hd   hd   hd   hd   hd   hd  hd   hd ."
+      "main main main main main main main main main main main main"
+      "ft ft ft ft   ft   ft   ft   ft   ft   ft   ft   ft";
 }
 
-.inner-wrapper {
-	padding: 0 20px;
-	max-width: 1280px;
+
+.content {
+    grid-area: main;
+	padding-bottom: 100px;
 	margin: auto;
-	position: relative;
+	display: grid;
+	grid-template-columns: minmax(auto, $content-width);
 }
 
-.content-width {
-	margin: auto;
-	max-width: 1080px;
+
+// need to define breakpoint variables
+
+
+@media screen and (max-width: 1000px) {
+	.container {
+		grid-template-areas: 
+		      "hd hd hd hd   hd   hd   hd   hd   hd  hd   hd hd"
+		      "main main main main main main main main main main main main"
+		      "ft ft ft ft   ft   ft   ft   ft   ft   ft   ft   ft";
+	}
 }
