--- a/assets/sass/components/_article.scss
+++ b/assets/sass/components/_article.scss
@@ -1,16 +1,15 @@
 .article {
-	max-width: 1080px;
-	margin: auto;
-	padding-bottom: 100px;
+	// display: flex;
+	// grid-template-columns: minmax(auto, $content-width);
+	// margin: auto;
 
 	.feature-image {
 		position: absolute;
 		left: 0;
 		width: 100vw;
 		height: 413px;
-		margin-top: -200px;
 		z-index: -1;
-		clip-path: polygon(0% 50px, 100% 0%, 100% 100%, 0% 100%);
+		clip-path: polygon(0% 4vw, 100% 0%, 100% 100%, 0% 100%);
 	}
 
 	.article-category {
@@ -50,7 +49,7 @@
 		padding: 60px;
 		margin-top: 200px;
 		background-color: $hbc-white;
-		clip-path: polygon(0% 0%, 100% 50px, 100% 100%, 0% 100%);
+		clip-path: polygon(0% 0%, 100% 4vw, 100% 100%, 0% 100%);
 
 		p {
 			max-width: 820px;
